--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -14,7 +14,7 @@
 
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h4 style="text-align: center" id="update_text"></h4>
+                    <h4 class="text-center" id="update_text">{{ updated_percentage }}</h4>
                     <script>
                         $(function () {
                             var percentage = "{{ updated_percentage }}";
