--- a/templates/cars/car_edit.html
+++ b/templates/cars/car_edit.html
@@ -13,6 +13,13 @@
                     {% endfor %}
                 </div>
             {% endif %}
+            {% if form.non_field_errors %}
+                <div class="alert alert-danger">
+                    {% for error in form.non_field_errors %}
+                        {{ error }}
+                    {% endfor %}
+                </div>
+            {% endif %}
 
             <form class="form-horizontal" action="" method="post">
                 {% csrf_token %}
