Add fixtures Fix message

--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -22,7 +22,7 @@
                             var element = document.getElementById("update_text");
 
                             if (outdated_percentage === "100") {
-                                element.innerHTML = "Żaden obszar nie został jeszcze aktualizowany.";
+                                element.innerHTML = "Żaden obszar nie został jeszcze zaktualizowany.";
                             } else if (updated_percentage === "100") {
                                 element.innerHTML = "Wszystkie obszary są zaktualizowane.";
                             } else {
