add text-center to update date

--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -52,7 +52,7 @@
             </div>
             <div id="greenFieldAlert"></div>
             <div id="map1"></div>
-            <div class="row"><label id="lastUpdate">Data ostatnio wykonanej aktualizacji danych z GDDKiA: 2017-12-10T23:08:10+0100</label></div>
+            <div class="row text-center"><label id="lastUpdate">Data ostatnio wykonanej aktualizacji danych z GDDKiA: 2017-12-10T23:08:10+0100</label></div>
         </div>
     </div>
     {% csrf_token %}
