--- a/templates/cars/car_list.html
+++ b/templates/cars/car_list.html
@@ -28,8 +28,10 @@
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             {{ car.brand }} {{ car.model }}
-                            <a class="btn btn-warning" style="float: right; padding: 2px"
+                            <a class="btn btn-warning" style="float: right; padding: 2px; margin: 0 5px"
                                href="{% url 'cars:car_edit' pk=car.pk %}">Edytuj samochód</a>
+                            <a class="btn btn-danger" style="float: right; padding: 2px; margin: 0 5px"
+                               href="{% url 'cars:car_delete' pk=car.pk %}">Usuń samochód</a>
                         </div>
                         <div class="panel-body">
                             <p><b>Marka:</b> {{ car.brand }}</p>
