car - last location

--- a/templates/cars/car_list.html
+++ b/templates/cars/car_list.html
@@ -40,7 +40,7 @@
                             <p><b>Numer ubezpieczenia:</b> {{ car.insurance_number }}</p>
                             <p><b>Dostępność:</b> {{ car.is_available|yesno:"Dostępny,Niedostępny" }}</p>
                             <p><b>Stan:</b> {{ car.need_repair }}</p>
-                            <p><b>Ostatnio przesłane współrzędne:</b> {{ car.last_location }}</p>
+                            <p><b>Ostatnio przesłane współrzędne:</b> {{ car.last_location.longitude }} {{ car.last_location.latitude }}</p>
                         </div>
                     </div>
                 {% endfor %}
