Refactored schedule view.

--- a/templates/drivers/schedule.html
+++ b/templates/drivers/schedule.html
@@ -2,17 +2,34 @@
 
 {% block content %}
 
-    <form action="" method="get">
-        {{ filter.form.as_p }}
-        <input type="submit" />
-    </form>
-
-
     <div class="container">
         <div class="col-md-10 col-md-offset-1">
             <div class="container">
 
                 <h2>Harmonogram</h2>
+
+                <div class="well">
+                    <h4>Filtruj Harmonogram</h4>
+                    <div class="schedule-filter">
+                        <form class="form-horizontal" action="" method="get">
+                            <div class="form-group">
+                                <label class="control-label col-md-2" for="{{ filter.form.schedule__id.id_for_label }}">ID
+                                    Obszaru:</label>
+                                <div class="col-md-10">
+                                    {{ filter.form.schedule__id }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-2" for="{{ filter.form.full_name.id_for_label }}">Dane Kierowcy:</label>
+                                <div class="col-md-10">
+                                    {{ filter.form.full_name }}
+                                </div>
+                            </div>
+                            <input type="submit" value="Filtruj!" class="btn btn-outline-geo"/>
+                        </form>
+                    </div>
+                </div>
+
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -23,10 +40,10 @@
                     <tbody>
                     {% for d in filter.qs %}
                         {% for s in d.schedule.all %}
-                        <tr>
-                            <td>{{ s.id }}</td>
-                            <td>{{ d.full_name }}</td>
-                        </tr>
+                            <tr>
+                                <td>{{ s.id }}</td>
+                                <td>{{ d.full_name }}</td>
+                            </tr>
                         {% endfor %}
                     {% endfor %}
                     </tbody>
