--- a/templates/drivers/delete_form.html
+++ b/templates/drivers/delete_form.html
@@ -4,13 +4,13 @@
 
     <div class="container" style="margin-top: 5vh">
         <div class="col-md-8 col-md-offset-2">
-            <h2 style="text-align: center">Usun kierowcę</h2>
+            <h2 style="text-align: center">Usuń kierowcę</h2>
             <form action="" method="post">{% csrf_token %}
-                <p>Czy na pewno chcesz usunąć "{{ object }}"?</p>
+                <p>Czy na pewno chcesz usunąć kierowcę "{{ object.full_name }}"?</p>
 {#                <input type="submit" value="Confirm" />#}
                 <div class="form-group">
                     <div class="col-sm-offset-4 col-sm-8">
-                        <button type="submit" class="btn btn-outline-geo">Usun</button>
+                        <button type="submit" class="btn btn-outline-geo">Usuń</button>
                     </div>
                     <div class="col-sm-offset-4 col-sm-8">
                         <button class="btn btn-default" name="cancel" formnovalidate>Anuluj</button>
