--- a/templates/cars/car_list.html
+++ b/templates/cars/car_list.html
@@ -43,7 +43,7 @@
                             <p><b>Dostępność:</b> {{ car.is_available|yesno:"Dostępny,Niedostępny" }}</p>
                             <p><b>Stan:</b> {{ car.need_repair }}</p>
                             <p><b>Ostatnio przesłane współrzędne:</b> {{ car.last_location }}</p>
-                            <p><b>Kierowca:</b> {{ car.driver }}</p>
+                            <p><b>Kierowca:</b> {{ car.driver.full_name }}</p>
                         </div>
                     </div>
                 {% endfor %}
