un-fake Last Updated string on landing page

--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -52,7 +52,10 @@
             </div>
             <div id="greenFieldAlert"></div>
             <div id="map1"></div>
-            <div class="row text-center"><label id="lastUpdate">Data ostatnio wykonanej aktualizacji danych z GDDKiA: 2017-12-10T23:08:10+0100</label></div>
+            <div class="row text-center">
+                <label id="lastUpdate">Data ostatnio wykonanej aktualizacji danych z GDDKiA:
+                    {{ last_gddkia_update.last_updated__max|date:'d E Y H:i'  }}
+                </label></div>
         </div>
     </div>
     {% csrf_token %}
