--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,7 @@
                 <li><a href="{% url "regions:regions" %}">Obszary <span class="sr-only">(current)</span></a></li>
                 <li><a href="{% url "drivers:list" %}">Kierowcy</a></li>
                 <li><a href="{% url "cars:car_list" %}">Samochody</a></li>
+                <li><a href="{% url "updates:updates_history_list" %}">Historia</a></li>
 
             </ul>
 
