--- a/templates/updates/region_update_history.html
+++ b/templates/updates/region_update_history.html
@@ -2,19 +2,24 @@
 
 {% block content %}
 
-            <div class="row">
-                <div class="col-md-10">
-                    <h2 style="text-align:left">Historia aktualizacji obszarów:</h2>
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <h2 style="text-align:center">Historia aktualizacji obszarów:</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
             {% if all_regions %}
                 {% for r in all_regions %}
                     <div class="panel panel-primary">
                         {# tutaj nazwa/numer obszaru #}
+                        {# data - aktualizacja regionu nr X przez kierowcę  #}
                         <div class="panel-body">
-                            <p><b>Region</b> {{ r.id }}.</p>
-                            {# Tutaj dać date aktualizacji i inne dane #}
-                            <p><b>Zaktualizowano</b> {{ r.last_updated }} <b>przez</b> {{ r.updated_by }}.</p>
+                            {% if r.updateb_by != '' %}
+                                <p>{{ r.last_updated }} - Aktualizacja regionu {{ r.id }} przez {{ r.updated_by }}.</p>
+                            {% else %}
+                                <p>{{ r.last_updated }} - Aktualizacja regionu {{ r.id }}.</p>
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
