--- a/templates/cars/car_list.html
+++ b/templates/cars/car_list.html
@@ -42,14 +42,8 @@
                             <p><b>Numer ubezpieczenia:</b> {{ car.insurance_number }}</p>
                             <p><b>Dostępność:</b> {{ car.is_available|yesno:"Dostępny,Niedostępny" }}</p>
                             <p><b>Stan:</b> {{ car.need_repair }}</p>
-                            <p><b>Ostatnio przesłane współrzędne:</b> {{ car.last_location.latitude }} {{ car.last_location.longitude }} </p>
-                            <p><b>Kierowca:</b>
-                                {% if car.driver != '' %}
-                                {{ car.driver.full_name }}
-                                {% else %}
-                                brak danych
-                                {% endif %}
-                                </p>
+                            <p><b>Ostatnio przesłane współrzędne:</b> {{ car.last_location.latitude|default:"brak danych" }} {{ car.last_location.longitude }} </p>
+                            <p><b>Kierowca:</b> {{ car.driver.full_name|default:"brak danych" }}</p>
                         </div>
                     </div>
                 {% endfor %}
