--- a/templates/updates/region_update_history.html
+++ b/templates/updates/region_update_history.html
@@ -37,21 +37,25 @@
     </div>
 
     {% if is_paginated %}
-        <div class="pagination">
-            <span class="step-links">
-                {% if paginator.has_previous %}
-                    <a href="?page={{ paginator.previous_page_number }}">Wcześniejsza</a>
-                {% endif %}
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="pagination">
+                <span class="step-links">
+                    {% if paginator.has_previous %}
+                        <a href="?page={{ paginator.previous_page_number }}">Wcześniejsza</a>
+                    {% endif %}
 
-                <span class="current">
-                    Page {{ paginator.number }} of {{ paginator.paginator.num_pages }}.
+                    <span class="current">
+                        Page {{ paginator.number }} of {{ paginator.paginator.num_pages }}.
+                    </span>
+
+                    {% if paginator.has_next %}
+                        <a href="?page={{ paginator.next_page_number }}">Następna</a>
+                    {% endif %}
                 </span>
-
-                {% if paginator.has_next %}
-                    <a href="?page={{ paginator.next_page_number }}">Następna</a>
-                {% endif %}
-            </span>
+            </div>
         </div>
+    </div>
     {% endif %}
 
 {% endblock %}
