--- a/templates/updates/region_update_history.html
+++ b/templates/updates/region_update_history.html
@@ -16,11 +16,11 @@
                         {# data - aktualizacja regionu nr X przez kierowcę  #}
                         <div class="panel-body">
                             {% if r.updated_by == 'DRV'%}
-                                <p>{{ r.last_updated }} - Aktualizacja regionu {{ r.id }} przez kierowcę.</p>
+                                <p>{{ r.last_updated|date:"d/m/y" }} {{ r.last_updated|time:"H:i:s" }} - Aktualizacja regionu {{ r.id }} przez kierowcę.</p>
                             {% elif r.updated_by == 'GDDKiA' %}
-                                <p>{{ r.last_updated }} - Aktualizacja regionu {{ r.id }} z bazy danych GDDKiA.</p>
+                                <p>{{ r.last_updated|date:"d/m/y" }} {{ r.last_updated|time:"H:i:s" }} - Aktualizacja regionu {{ r.id }} z bazy danych GDDKiA.</p>
                             {% else %}
-                                <p>{{ r.last_updated }} - Aktualizacja regionu {{ r.id }}.</p>
+                                <p>{{ r.last_updated|date:"d/m/y" }} {{ r.last_updated|time:"H:i:s" }} - Aktualizacja regionu {{ r.id }}.</p>
                             {% endif %}
                         </div>
                     </div>
@@ -39,21 +39,21 @@
     {% if is_paginated %}
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div class="pagination">
-                <span class="step-links">
-                    {% if paginator.has_previous %}
-                        <a href="?page={{ paginator.previous_page_number }}">Wcześniejsza</a>
-                    {% endif %}
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page={{ page_obj.previous_page_number }}">Wcześniejsza</a>
+                {% endif %}
 
-                    <span class="current">
-                        Page {{ paginator.number }} of {{ paginator.paginator.num_pages }}.
-                    </span>
-
-                    {% if paginator.has_next %}
-                        <a href="?page={{ paginator.next_page_number }}">Następna</a>
-                    {% endif %}
+                <span class="current">
+                    Strona {{ page_obj.number }} z {{ page_obj.paginator.num_pages }}.
                 </span>
-            </div>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">Następna</a>
+                {% endif %}
+            </span>
+        </div>
         </div>
     </div>
     {% endif %}
